--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@ layout: home
 author_profile: true
 ---
 
-Hi, this website is still a work in progress. Eventually I hope to a variety of things gere include some python examples, posts and maybe even more but for now this is a blank canvas that I'm only just starting to work on.
+Hi, this website is still a work in progress. Eventually I hope to a variety of things here include some python examples, posts and maybe even more but for now this is a blank canvas that I'm only just starting to work on.
 
 Michael
