--- a/_pages/publications.html
+++ b/_pages/publications.html
@@ -3,6 +3,8 @@ layout: archive
 title: "Publications"
 permalink: /publications/
 author_profile: true
+toc: true
+toc_sticky: true
 ---
 
 {% if site.author.inspirehep %}
