--- a/_pages/talks.html
+++ b/_pages/talks.html
@@ -3,6 +3,8 @@ layout: archive
 title: "Talks and presentations"
 permalink: /talks/
 author_profile: true
+toc: true
+toc_sticky: true
 ---
 
 {% if site.talkmap_link == true %}
