--- a/_pages/teaching.html
+++ b/_pages/teaching.html
@@ -3,6 +3,8 @@ layout: archive
 title: "Teaching"
 permalink: /teaching/
 author_profile: true
+toc: true
+toc_sticky: true
 ---
 
 {% include base_path %}
